[project]
name = "feature-finetune"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.13.0",
    "bitsandbytes>=0.49.2",
    "hf-xet>=1.5.0",
    "huggingface-hub>=1.14.0",
    "peft>=0.19.1",
    "numpy<2",
    "torch>=2.4",
    "torchview>=0.2.7",
    "transformers>=5.5.0",
    "unsloth>=2026.5.2",
    "open-flamingo>=0.0.2",
]
